diversas modificacoes